--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "dayjs": "^1.8.28",
     "emotion-theming": "^10.0.27",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
