--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "realtime-weather-app",
+  "name": "learn-react-from-hook",
+  "homepage": "https://pjchender.github.io/learn-react-from-hook-realtime-weather-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "dayjs": "^1.8.28",
     "emotion-theming": "^10.0.27",
+    "gh-pages": "^3.1.0",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -19,6 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:sunrise-sunset": "node ./src/utils/filter-sunrise-and-sunset",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
