--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/core": "^10.1.1",
-    "@emotion/styled": "^10.0.27",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.1",
-    "@testing-library/user-event": "^12.2.0",
-    "dayjs": "^1.9.5",
-    "emotion-theming": "^10.0.27",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
+    "dayjs": "^1.10.2",
     "gh-pages": "^3.1.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
